@@ -1,3 +1,8 @@
+2011-04-19  Ivan Maidanski  <ivmai@mail.ru>
+
+	* include/private/gc_priv.h (_GNU_SOURCE): Include features.h
+	first (except for NaCl) and then define the macro to 1 if not yet.
+
 2011-04-18  Ivan Maidanski  <ivmai@mail.ru> (really Ludovic Courtes)
 
 	* tests/tests.am (TESTS, check_PROGRAMS): Add
